--- a/vistas/ingresar.html
+++ b/vistas/ingresar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Somos un grupo de profesionales que buscamos la excelencia deportiva y personal">
-    <meta name="keywords" content="ingres, usuario, contraseña">
+    <meta name="keywords" content="ingreso, usuario, contraseña">
     <link rel="shortcut icon" href="../assets/tennis(1).png"type=image/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -85,6 +85,6 @@
         </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="../JS/main.js"></script>
   </body>
 </html>
